Create memory overview and add memory form
Turned list and items into components.  Created overview component.  Add ability to add memory.

--- a/first-ionic-vue-app/capacitor.config.json
+++ b/first-ionic-vue-app/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "first-ionic-vue-app",
+  "appId": "com.atsand.firstionicapp",
+  "appName": "First Ionic App",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "dist",
